[package]
name = "rust-p2p-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# As mentioned above, we’ll use libp2p for the peer-to-peer 
# networking part. More specifically, we’re going to use it i
# n concert with the Tokio async runtime. We’ll use Serde for
#  JSON serialization and deserialization and a couple of hel
#  per libraries for logging and initializing state.
libp2p = "0.46.1"
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "=1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
